[fix] Metric - Label alignment

--- a/src/modules/base/metric/metric.css
+++ b/src/modules/base/metric/metric.css
@@ -288,6 +288,5 @@
 }
 
 .avonni-metric__label-error {
-    margin-top: -0.25rem;
     --slds-c-icon-color-foreground: #ba0517;
 }
